# Alice

./: .gitignore  AGENTS.md  Alice 服务化架构建议.md  Alice创意讨论.md  CHANGES_SUMMARY.md  CHINESE_UI_CHANGES.md  CLAUDE.md  CLI交互界面技术方案.md  DEVELOPMENT_STRUCTURE.md  FIXES.md  GITHUB_PROJECTS_GUIDE.md  HeartBeat.md设计.md  PHASE2_IMPLEMENTATION.md  PHASE5_IMPLEMENTATION.md  PROJECT_SETUP_COMPLETE.md  QWEN.md  README.md  TESTING.md  THINKING_COLLAPSE_FEATURE.md  TOOL_DEVELOPMENT_GUIDE.md  ai.js  alice-session-2026-02-22T00-38-13.html  alice.sh  chat-grok0323.md  config.js  configure_project.py  fix_imports.mjs  fix_imports.ts  github_auth.json  index-qwencode.js  index.js  jsconfig.json  news0317.md  package-lock.json  package.json  pi-mono架构说明.md  qwencode-ui.js  settings.jsonc.example  tsconfig.json  tui-turnning0330.md  (+6 more)
.github/: copilot-instructions.md  issue_feishu_baseurl.md  issue_ghostty_flicker.md
oh-flow/: README.md  pyproject.toml
oh-flow/oh_flow/: __init__.py
oh-flow/oh_flow/bridge/: __init__.py  protocol.py  session_persistence.py  session_runner.py  socket_server.py  work_secret.py
oh-flow/oh_flow/commands/: __init__.py  registry.py
oh-flow/oh_flow/engine/: __init__.py  query.py  query_engine.py  stream_events.py
oh-flow/oh_flow/hooks/: __init__.py
oh-flow/oh_flow/metrics/: __init__.py  collector.py
oh-flow/oh_flow/permissions/: __init__.py  checker.py
oh-flow/oh_flow/state/: __init__.py  app_state.py
oh-flow/oh_flow/tools/: __init__.py  base.py  bash_tool.py  file_read_tool.py  file_write_tool.py  glob_tool.py  grep_tool.py  toolbox.py
roles/: ani.md  (+5 more)
(+286 files in other folders)
